# computer-graphics

./: CMakeLists.txt  ComputerGraphics  README.md  zerodiff
libs/: scene.cpp  scene.h
libs/geometry/: color.cpp  color.h  common.cpp  common.h  geometry_objects.cpp  geometry_objects.h  lights.cpp  lights.h  point.cpp  point.h  ray.cpp  ray.h
libs/scene/: scene.cpp  scene.h
src/: main.cpp  main_scene.cpp  main_scene.h
